alpm-files/tests/fixtures/parser_errors/empty_line_preceeds_header.snap
---
source: alpm-files/tests/parser_errors.rs
description: "\n%FILES%\nusr/\nusr/bin/\nusr/bin/foo\n"
expression: error
---
Parser failed with the following error:
parse error at line 1, column 1
  |
1 | 
  | ^
invalid alpm-files section header
expected %FILES%
